[package]
name = "bluepill-examples"
version = "0.1.0"
authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
embedded-hal = "0.2.3"
mcp4725 = { git = "https://github.com/mendelt/mcp4725" }
panic-semihosting = "0.6"
nb = "1"

[dependencies.hal]
package = "stm32f1xx-hal"
version = "0.10"
features = ["rt", "stm32f103", "medium"]
